src/App.css
/* Global styles */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* Navbar styles */
.navbar {
  display: flex;
  width: 100%;
  padding: 1rem;
  padding-inline: 2rem;
  justify-content: space-between;
  align-items: center;
}

.cart {
  position: relative;
}

.cart-count {
  position: absolute;
  top: -5px;
  right: -5px;
  background-color: red;
  color: white;
  border-radius: 50%;
  padding: 10px;
  font-size: 14px;
  font-weight: bold;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 20px;
  width: 20px;
}

.logo a {
  display: flex;
  justify-content: center;
  align-items: center;
}

.logo a span {
  font-size: 1.5rem;
  font-weight: bold;
}

/* Card component styles */
.card-container {
  display: flex;
  flex-direction: column;
  gap: 0.2rem;
  max-width: 300px;
  padding: 1rem;
  border: 1px solid #0000001a;
  border-radius: 10px;
  height: 390px;
}

a {
  text-decoration: none;
  color: black;
}

.card-container figure img {
  width: 100%;
  height: 200px;
  object-fit: contain;
}

.card-price {
  color: green;
  font-size: 1.5rem;
}

.card-title {
  font-size: 1.2rem;
  font-weight: bold;
}

.card-desc {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
  overflow: hidden;
  text-overflow: ellipsis;
  box-orient: vertical;
  line-clamp: 2;
}

/* Products list container styles */
.products-list-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}

/* Pagination styling */

.pagination {
  display: flex;
  justify-content: center;
  margin: 1rem auto;
}

.pagination button {
  margin: 0 0.25rem;
  padding: 0.5rem 1rem;
  border: 1px solid #ccc;
  background-color: #fff;
  cursor: pointer;
}

.pagination button:disabled {
  cursor: not-allowed;
  background: green;
  opacity: 0.5;
}

.pagination button:not(:disabled):hover {
  background-color: green;
}

/* Product page styles */
.product-container {
  margin-top: 2rem;
  display: flex;
  justify-content: center;
  width: 100%;
}

.product-container figure img {
  max-height: 60vh;
  object-fit: contain;
}

.product-image {
  border-right: 1px solid black;
  padding-inline: 2rem;
}

.product-price {
  color: green;
  font-size: 2.5rem;
  font-weight: bold;
}

.product-desc-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding-inline: 2rem;
  max-width: 450px;
}

.product-desc h2 {
  border-bottom: 1px solid black;
  margin-bottom: 1rem;
  padding-bottom: 0.5rem;
  font-size: 1.3rem;
}

.add-btn {
  padding: 1rem;
  font-weight: bold;
  font-size: 1rem;
  border: none;
  border-radius: 10px;
  background-color: green;
  color: white;
  max-width: 350px;
}

.add-btn:hover,
.add-btn:active,
.add-btn:focus {
  background-color: darkgreen;
  outline: none;
}

/* Cart Styling */

.cart-wrapper {
  display: flex;
  justify-content: space-around;
  align-items: center;
  gap: 1rem;
  width: 90%;
  margin: 0 auto;
}

.cart-wrapper div h1 {
  font-size: 1em;
  margin-bottom: 2px;
  font-weight: 200;
}

.items-container {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  max-width: 600px;
  margin: 0 auto;
  border-top: 1px solid black;
  border-bottom: 1px solid black;
  padding-inline: 10px;
}

.remove-item-btn {
  max-width: fit-content;
  padding: 5px 10px;
  border: none;
  border-radius: 5px;
  background-color: red;
  color: white;
  font-weight: bold;
  cursor: pointer;
}

.remove-item-btn:hover,
.remove-item-btn:active,
.remove-item-btn:focus {
  background-color: rgb(141, 14, 14);
}

.cart-title {
  width: 500px;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.cart-title h2 {
  font-size: 16px;
}

.cart-title .btn {
  padding: 1px 10px;
  border-radius: 5px;
  margin-inline: 3px;
  border: none;
  font-size: larger;
  text-align: center;
  background-color: green;
  color: white;
  cursor: pointer;
}

.cart-title .btn:disabled {
  background-color: rgb(141, 14, 14);
  cursor: not-allowed;
}

.cart-image figure {
  padding-right: 1rem;
}
.cart-image figure img {
  height: 150px;
  max-width: 100px;
  object-fit: contain;
}

.checkout-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 0.5rem;
  width: 400px;
}

.order-summary {
  border-top: 1px solid grey;
  border-bottom: 1px solid grey;
  padding: 10px 0px;
}

.order-value {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 5px auto;
}

/* Media query for screen sizes less than 768px */
@media only screen and (max-width: 768px) {
  .product-container {
    flex-direction: column;
    align-items: center;
    width: 90%;
  }
  .product-image {
    border-right: none;
    padding-inline: 0;
    width: 100%;
    display: flex;
    justify-content: center;
  }

  .product-image img {
    width: 100%;
  }

  .product-desc-container {
    max-width: 100%;
    padding-inline: 1rem;
  }

  .products-container {
    display: flex;
    flex-direction: column-reverse;
  }
}

